--- a/assets/style.css
+++ b/assets/style.css
@@ -2,21 +2,24 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
 }
 
 :root {
-  --light-green: #00ff00;
+  --light-green: #7de07d;
   --dark-green: #003b00;
   --dark-grey: #777;
   --light-grey: #dadce0;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 }
 
 a {
@@ -46,7 +49,7 @@ a.button:hover {
 header {
   width: 100%;
   height: 50px;
- position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -151,7 +154,8 @@ form {
     margin-bottom: 10px;
   }
 
-  form, .search-input {
+  form,
+  .search-input {
     width: 100%;
   }
 
@@ -170,4 +174,4 @@ form {
   .article-image {
     display: none;
   }
-} 
+}
