--- a/assets/style.css
+++ b/assets/style.css
@@ -47,8 +47,9 @@ a.button:hover {
 }
 
 header {
+  color: var(--dark-green);
   width: 100%;
-  height: 50px;
+  height: 60px;
   position: fixed;
   top: 0;
   left: 0;
@@ -60,7 +61,24 @@ header {
   align-items: center;
 }
 
+footer {
+  color: var(--dark-green);
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--light-green);
+  padding: 5px 10px;
+  align-items: center;
+}
+
 .logo {
+  font-size: 24px;
+  font-weight: 700;
   color: #002200;
 }
 
